# cpp-init

./: README.md  compilation.md  error_handling.md  opinions.md
example/: .clang-format  CMakeLists.txt
example1/: .editorconfig  CMakeLists.txt
example2/: CMakeLists.txt
example2/code/example/: CMakeLists.txt  example_hello.cpp  example_hello.test.cpp  example_logger.hpp  example_logger.test.hpp  example_logger_console.hpp  example_logger_file.hpp  example_pch.hpp  example_platform.hpp  example_platform.test.hpp  example_platform_win32.cpp
example2/code/example_app/: CMakeLists.txt  example_app.cpp
example3/: .clang-format  .gitignore  CMakeLists.txt
example3/code/example/: CMakeLists.txt  example_hello.cpp  example_hello.hpp  example_hello.test.cpp  example_logger.cpp  example_logger.hpp  example_pch.hpp  example_platform.hpp  example_platform.test.hpp  example_platform_win32.cpp
example3/code/example_app/: example_app.cpp
